--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
     set(CMAKE_C_COMPILER "emcc")
     set(CMAKE_CXX_COMPILER "em++")
-    set(USE_FLAGS "-s USE_SDL=2 -s USE_FREETYPE=1 -s USE_SDL_TTF=2 -s USE_SDL_GFX=2 -s USE_SDL_IMAGE=2 -sNO_DISABLE_EXCEPTION_CATCHING")
+    set(USE_FLAGS "-s USE_SDL=2 -s USE_FREETYPE=1 -s USE_SDL_TTF=2 -s USE_SDL_GFX=2 -s USE_SDL_IMAGE=2 -s USE_SDL_MIXER=2 -sNO_DISABLE_EXCEPTION_CATCHING")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${USE_FLAGS} -pthread")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS} -pthread")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS} -pthread --use-preload-plugins -s SDL2_IMAGE_FORMATS='[\"png\"]' --preload-file assets")
@@ -36,6 +36,7 @@ else()
     find_package(SDL2_ttf CONFIG REQUIRED)
     find_package(sdl2-gfx CONFIG REQUIRED)
     find_package(sdl2-image CONFIG REQUIRED)
+    find_package(SDL2_mixer CONFIG REQUIRED)
 endif()
 
 # Remove the command prompt window on Windows and set the Windows SDK version
@@ -60,10 +61,10 @@ if (EMSCRIPTEN)
 elseif (APPLE)
     # This is for macOS
     # TODO: Handle iOS.
-    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf-static SDL2::SDL2_gfx SDL2::SDL2_image "-framework CoreFoundation")
+    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf-static SDL2::SDL2_gfx SDL2::SDL2_image SDL2_mixer::SDL2_mixer "-framework CoreFoundation")
     set_target_properties(AwesomeGame PROPERTIES LINK_FLAGS "-Wl,-F/Library/Frameworks")
 elseif (WIN32)
-    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf SDL2::SDL2_gfx SDL2::SDL2_image "Shlwapi.lib")
+    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf SDL2::SDL2_gfx SDL2::SDL2_image SDL2_mixer::SDL2_mixer "Shlwapi.lib")
 elseif (LINUX)
-    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf SDL2::SDL2_gfx SDL2::SDL2_image)
+    target_link_libraries(AwesomeGame PRIVATE SDL2::SDL2 SDL2::SDL2main SDL2_ttf::SDL2_ttf SDL2::SDL2_gfx SDL2::SDL2_image SDL2_mixer::SDL2_mixer)
 endif ()
